<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/AdminSignUpActivityRL"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example2.parth.smart_tagging.AdminSignUpActivity"
    tools:showIn="@layout/activity_admin_sign_up">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:text="@string/AdminSignUpActivityLT1"
        android:id="@+id/AdminSignUpActivityLT1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityET1"
        android:hint="@string/AdminSignUpActivityET1"
        android:textAlignment="center"
        android:layout_below="@+id/AdminSignUpActivityLT1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityET2"
        android:hint="@string/AdminSignUpActivityET2"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/AdminSignUpActivityET1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityET3"
        android:hint="@string/AdminSignUpActivityET3"
        android:textAlignment="center"
        android:layout_below="@+id/AdminSignUpActivityET1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityET4"
        android:hint="@string/AdminSignUpActivityET4"
        android:textAlignment="center"
        android:layout_below="@+id/AdminSignUpActivityET3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityET5"
        android:hint="@string/AdminSignUpActivityET5"
        android:textAlignment="center"
        android:layout_below="@+id/AdminSignUpActivityET4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityET6"
        android:hint="@string/AdminSignUpActivityET6"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/AdminSignUpActivityET5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AdminSignUpActivityMT1"
        android:textAlignment="center"
        android:id="@+id/AdminSignUpActivityMT1"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/AdminSignUpActivityET5"
        android:layout_alignLeft="@+id/AdminSignUpActivityET7"
        android:layout_alignStart="@+id/AdminSignUpActivityET7"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityRadioGroup"
        android:layout_alignTop="@+id/AdminSignUpActivityMT1"
        android:layout_alignLeft="@+id/AdminSignUpActivityET6"
        android:layout_alignStart="@+id/AdminSignUpActivityET6">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AdminSignUpActivityRB1"
            android:text="@string/AdminSignUpActivityRB1"
            android:textAlignment="center"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AdminSignUpActivityRB2"
            android:text="@string/AdminSignUpActivityRB2"
            android:textAlignment="center"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AdminSignUpActivityRB3"
            android:text="@string/AdminSignUpActivityRB3"
            android:textAlignment="center"/>
    </RadioGroup>

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminSignUpActivityET7"
        android:hint="@string/AdminSignUpActivityET7"
        android:textAlignment="center"
        android:layout_above="@+id/AdminSignUpActivityB1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdminSignUpActivityB1"
        android:textAlignment="center"
        android:id="@+id/AdminSignUpActivityB1"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/AdminSignUpActivityLT1"
        android:layout_toStartOf="@+id/AdminSignUpActivityLT1"
        android:onClick="onClickAdminSignUpExitActivity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdminSignUpActivityB2"
        android:textAlignment="center"
        android:id="@+id/AdminSignUpActivityB2"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/AdminSignUpActivityLT1"
        android:layout_toEndOf="@+id/AdminSignUpActivityLT1"
        android:onClick="onClickGoToAdminLogInActivity"/>

</RelativeLayout>
