<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/AdminLogInActivityRL"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example2.parth.smart_tagging.AdminLogInActivity"
    tools:showIn="@layout/activity_admin_log_in">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AdminLogInActivityLT1"
        android:id="@+id/AdminLogInActivityLT1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdminLogInActivityB1"
        android:id="@+id/AdminLogInActivityB1"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/AdminLogInActivityLT1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickAdminSignUpActivity"/>

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminLogInActivityET1"
        android:hint="@string/AdminLogInActivityET1"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:inputType="textPassword"
        android:layout_below="@+id/AdminLogInActivityB1"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminLogInActivityET2"
        android:hint="@string/AdminLogInActivityET2"
        android:textAlignment="center"
        android:layout_below="@+id/AdminLogInActivityET1"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/AdminLogInActivityET3"
        android:hint="@string/AdminLogInActivityET3"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_below="@+id/AdminLogInActivityET2"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:text="@string/AdminLogInActivityB2"
        android:id="@+id/AdminLogInActivityB2"
        android:layout_below="@+id/AdminLogInActivityET3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="onClickAdminHomeActivity"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/AdminLogInActivityB3"
        android:id="@+id/AdminLogInActivityB3"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/AdminLogInActivityB2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickAdminLogInExitActivity"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/AdminLogInActivityB4"
        android:id="@+id/AdminLogInActivityB4"
        android:layout_alignBottom="@+id/AdminLogInActivityB3"
        android:layout_alignRight="@+id/AdminLogInActivityB1"
        android:layout_alignEnd="@+id/AdminLogInActivityB1"
        android:onClick="onClickAdminForgotCredentialsActivity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AdminLogInActivityLT2"
        android:id="@+id/AdminLogInActivityLT2"
        android:layout_below="@+id/AdminLogInActivityLT1"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
