<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/ApplicationLogoutActivityRL"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example2.parth.smart_tagging.ApplicationLogoutActivity"
    tools:showIn="@layout/activity_application_logout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ApplicationLogoutActivityLT1"
        android:id="@+id/ApplicationLogoutActivityLT1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/ApplicationLogoutActivityB1"
        android:id="@+id/ApplicationLogoutActivityB1"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/ApplicationLogoutActivityB2"
        android:layout_alignStart="@+id/ApplicationLogoutActivityB2"
        android:onClick="onClickApplicationLogoutLogin"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/ApplicationLogoutActivityB2"
        android:id="@+id/ApplicationLogoutActivityB2"
        android:layout_marginBottom="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickApplicationLogoutExit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ApplicationLogoutActivityMT1"
        android:id="@+id/ApplicationLogoutActivityMT1"
        android:layout_marginBottom="64dp"
        android:layout_above="@+id/ApplicationLogoutActivityB1"
        android:layout_alignLeft="@+id/ApplicationLogoutActivityLT1"
        android:layout_alignStart="@+id/ApplicationLogoutActivityLT1"/>
</RelativeLayout>
